--- a/app/src/main/res/layout/dialog_add_image.xml
+++ b/app/src/main/res/layout/dialog_add_image.xml
@@ -96,11 +96,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heightInput" />
 
-      <androidx.constraintlayout.widget.Group
-          android:id="@+id/inputDimensionsRoot"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          app:constraint_referenced_ids="fetchImageButton,heightInput,widthInput,enterImageDimensions" />
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/inputDimensionsRoot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:constraint_referenced_ids="fetchImageButton,heightInput,widthInput,enterImageDimensions" />
 
       <TextView
           android:id="@+id/progressSubtitle"
@@ -226,12 +227,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/customLabelInput" />
 
-      <androidx.constraintlayout.widget.Group
-          android:id="@+id/mainRoot"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:visibility="gone"
-          app:constraint_referenced_ids="colorChips,imageView,paletteColorTV,labelChips,customLabelInput,AddButton,ChooseLabelTitle" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/shareImgBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/share_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/customLabelInput" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/mainRoot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="colorChips,imageView,paletteColorTV,labelChips,customLabelInput,AddButton,ChooseLabelTitle,shareImgBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
