--- a/app/src/main/res/menu/gallery.xml
+++ b/app/src/main/res/menu/gallery.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/AddFromGallery"
+        android:icon="@drawable/ic_add_gallery"
+        android:title="Add Image"
+        app:showAsAction="always"
+        />
+
+    <item
         android:id="@+id/add_image"
         android:icon="@drawable/ic_add_image"
         android:title="Add Image"
         app:showAsAction="always"/>
+
 </menu>
