--- a/app/src/main/res/menu/gallery.xml
+++ b/app/src/main/res/menu/gallery.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/sorting"
+        android:icon="@drawable/ic_alpha_sort"
+        android:title="@string/Sort_Alphabetically"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/AddFromGallery"
         android:icon="@drawable/ic_add_gallery"
         android:title="Add Image"
@@ -14,5 +20,11 @@
         android:icon="@drawable/ic_add_image"
         android:title="Add Image"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_search"
+        android:title="@string/search"
+        app:showAsAction="always"
+        app:actionViewClass="android.widget.SearchView"/>
 
 </menu>
