--- a/app/src/main/res/layout/dialog_add_image.xml
+++ b/app/src/main/res/layout/dialog_add_image.xml
@@ -202,7 +202,7 @@
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
-          android:hint="@string/Labelhint"
+          android:hint="@string/LabelHint"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/labelChips">
